--- a/docs/notebooks/bit-flip-repetition-codes.ipynb
+++ b/docs/notebooks/bit-flip-repetition-codes.ipynb
@@ -12,7 +12,7 @@
     "### <font color='red'>Encoding procedure</font>\n",
     "\n",
     "Just as a 3-bit _classical_ repetition code encodes $0 \\rightarrow 000$ and $1 \\rightarrow 111$, a 3-qubit _quantum_ repetition code encodes:\n",
-    "- $\\vert0\\rangle \\rightarrow \\vert000\\rangle$\n",
+    "- $\\ket{0} \\rightarrow \\ket{000}$\n",
     "- $\\vert1\\rangle \\rightarrow \\vert111\\rangle$\n",
     "\n",
     "\n",
